--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,9 +14,12 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
  
     <title>polybase market</title>
+
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
     <div id="root"></div>
  
   </body>
