--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,6 +15,11 @@
  
     <title>polybase market</title>
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/all.min.css" />
+
+    
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
   </head>
   <body>
